# Api-Consultas

./: README.md
api_consultas/: manage.py  pyproject.toml
api_consultas/api_consultas/: asgi.py  settings.py  urls.py  wsgi.py
