[tool.poetry]
name = "health-api"
version = "0.1.0"
description = "API para gestão de profissionais da saúde e consultas."
authors = ["Seu Nome <seu-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
djangorestframework = "^3.15.0"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.0"
drf-spectacular = "^0.27.2"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"